# naive_numbers

./: .gitignore  CMakeLists.txt  README.md
docs/: testing_plan.md  tutorial.md
include/: matrix.h  nn.h  number.h  probability.h  tensor.h  text.h  utils.h  vector.h
include/math/: vector.h
include/util/: error.h  log.h  sort.h
src/: matrix.c  number.c  probability.c  text.c  utils.c  vector.c
src/math/: vector.c
test/: basic.c  chained_operations.c  matrix.c  memory_leak_test.c  number.c  probability.c  test_number_leak_fix.c  vector.c  vector_addition.c  vector_clone_test.c  vector_creation_test.c  vector_map_test.c
